# latex-cookbook

./: .gitattributes  .gitignore  .gitlab-ci.yml  .latexmkrc  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  acp.cls  cookbook-translations.sty  cookbook.cls  cookbook.tex  gitmeta.txt  latexmkrc  listings-languages.sty  main.bib  main.tex  yatt-translations.sty  yatt.bib  yatt.cls  yatt_presentation.tex  yatt_thesis.tex
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/: dependabot.yml
bib/: README.md  bibliography.bib
chapters/: README.md  backmatter.tex  floats.tex  frontmatter.tex  intro.tex  mainmatter.tex  style.tex  tech.tex  text.tex
data/: README.md  diffuser.csv  matlab2tikz_table_example.tex  matlab2tikz_table_example_data.csv
docker/: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md
fonts/: README.md
glossaries/: abbreviations.bib  subsuper.bib  symbols.bib
images/: boundary_map_pres.pdf_tex  boundary_map_pres_choking.pdf_tex  boundary_map_pres_instabilities.pdf_tex  diffuser_force_balance.pdf_tex  gas_volume.pdf_tex  impeller_isometric.pdf_tex  inducer_throat.pdf_tex  reservoirs_model.pdf_tex  stage_dimensions_compressor_pres.pdf_tex  stage_dimensions_compressor_pres_largesep.pdf_tex  stage_dimensions_compressor_pres_smallsep.pdf_tex  stage_dimensions_compressor_pres_solidity.pdf_tex  stanitz_force_balance.pdf_tex
lib/: README.md  example.lua  (+3 more)
tests/: Makefile  README.md  config.yml  pyproject.toml
tests/tests/: __init__.py  conftest.py  test_pdfs.py  test_self.py  utils.py
(+56 files in other folders)
