[tool.poetry]
name = "tests"
version = "4.0.0"
description = "Checks for PDFs."
authors = ["Alex Povel <alex.povel@tuhh.de>"]

[tool.poetry.dependencies]
python = "^3.10"
pymupdf = "^1.19.0"
pytest = "^7.4.0"
PyYAML = "^6.0"
python-dateutil = "^2.8.1"
PaperSize = "^1.3.0"

[tool.poetry.dev-dependencies]
ipython = "^8.14.0"
black = "^23.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
